@@ -1,5 +1,5 @@
 #
-# japaneselamprey parameters. 
+# japaneselamprey parameters. Lethenteron japonicum
 # 
 # date : 19.12.2006
 #
